rust/tests/snapshots/output/metrics__update_json.snap
---
source: tests/cli/snapshots.rs
---
$ vendo metrics update 6f1c2a9e-1111-4c3b-9a7e-000000000001 --description 'Return on ad spend' --json
exit: 0
--- stdout ---
{
  "data": {
    "id": "6f1c2a9e-1111-4c3b-9a7e-000000000001",
    "access_scope": "workspace",
    "account_id": "acct-alpha",
    "name": "ROAS",
    "description": "Return on ad spend",
    "definition": {
      "version": 2,
      "reportType": "segmentation"
    },
    "designated_breakdowns": [],
    "format": "multiplier",
    "higher_is_better": true,
    "icon_color": "emerald",
    "icon_name": "gauge",
    "owner_user_id": null,
    "unit": "x",
    "status": "active",
    "verified_at": null,
    "verified_by": null,
    "created_at": "2026-01-01T00:00:00Z",
    "created_by": null,
    "updated_at": "2026-01-05T09:07:03.000Z",
    "updated_by": null
  }
}
